# MCVSPEC

./: .gitignore  CMakeLists.txt  Cataclysmic_Variable.cpp  Cataclysmic_Variable.hh  LICENSE  README.md  chandrasekhar.txt  constants.hh  deqspec.cpp  equation_of_state.cpp  equation_of_state.hh  integration.cpp  integration.hh  ipsepc.cpp  ipspec.cpp  mcvspec.cpp  mcvspec.hh  mcvspec_core.cpp  mcvspec_core.hh  mcvspec_namespaces.hh  polarspec.cpp  tableau.hh
MCVXSPEC/: polarspec.cpp
data/: mass_radius.txt  txt_to_header.py  wd_mass_radius.py
deqspec/: README.md
include/: Cataclysmic_Variable.hh  XS_Cataclysmic_Variable.hh  constants.hh  gaunt.hh  integration.hh  tableau.hh
ipspec/: README.md  ipspec.cpp
kspec/: kspec.f90
mcvsepc_cpp/: kspec.f90  mcvspec.cpp  sync.cpp  syncTest.cpp
mcvsepc_cpp/XSFunctions/: Aped.cxx  Aped.h  NeutralOpacity.cxx  agauss.cxx  agnsed.f  bwcycl.c  calcLines.cxx  calcMultiTempPlasma.cxx  carbatm.cxx  cflux.cxx  cglumin.cxx  clumin.cxx  compbb.f90  compps.f  cpflux.cxx  dopwab.f  dospin.f  eqpairsubs.f  ezdiskbb.f  fespecs.f  fmekal.f  funcWrappers.cxx  funcWrappers.h  grad.f  hatm.cxx  idre.f  ismabs.f90  ismdust.f90  jet.f  kdblur.cxx  kdblur2.cxx  kerrbb.cxx  meksub.f  nei1tspec.f  nsa.f  nsagrav.f  nsatmos.f  nsmax.cxx  nsmaxg.cxx  nsx.cxx  (+34 more)
mcvsepc_cpp/XSFunctions/Utilities/: ComponentInfo.cxx  ComponentInfo.h  FunctionUtility.cxx  FunctionUtility.h  MdefExpression.cxx  MdefExpression.h  XSCall.cxx  XSCall.h  XSF77.cxx  XSModelFunction.cxx  XSModelFunction.h  funcType.h  xsCFortran.c  xsFortran.cxx  xsFortran.h
mcvsepc_cpp/mcvspec-compile/: sync.cpp
mcvspec_f90/: mcvspec.f90
model_funcs/: deqspec.cpp  ipsepc.cpp  polarspec.cpp
polarspec/: README.md
pymcvspec/: bindings.cpp  mcvspec.py  pyproject.toml
shockspec/: shockspec.f90
source/: Cataclysmic_Variable.cpp  XS_Cataclysmic_Variable.cpp  gaunt.cpp  integration.cpp
